@@ -214,7 +214,7 @@ __PACKAGE__->belongs_to(
 use Carp;
 
 with qw/npg_qc::Schema::Mqc::OutcomeEntity/ =>
-  { -excludes => [qw/toggle_final_outcome update_outcome/] };
+  { -excludes => [qw/toggle_final_outcome/] };
 
 our $VERSION = '0';
 
