@@ -318,7 +318,7 @@ subtest 'authentication and authorisation for an update' => sub {
 };
 
 subtest 'data validation for update requests' => sub {
-  plan tests => 8;
+  plan tests => 14;
 
   my $data = {'Action'   => 'UPDATE',
               'user'     => 'cat',
@@ -360,6 +360,35 @@ subtest 'data validation for update requests' => sub {
   is($response->code, $error_code, "error code is $error_code");
   like ($response->content, qr/Error saving outcome for 1:4 - Outcome description is missing/,
     'outcome description should not be empty');
+
+  delete $data->{'lib'};
+  $data->{'uqc'} = {'1:2;3:4' => {'uqc_outcome' => 'some'}};
+  $request = _new_post_request();
+  $request->content(encode_json($data));
+  $response = request($request);
+  is($response->code, $error_code, "error code is $error_code");
+  like ($response->content,
+    qr/Saving outcomes for multi-component compositions is not yet implemented/,
+    'multi-component compositions are not allowed for uqc');
+
+  $data->{'uqc'} = {'1:2' => {'uqc_outcome' => 'Undecided',
+                              'rationale'   => 'something'},
+                    '1:4' => {'uqc_outcome' => ''}};
+  $request = _new_post_request();
+  $request->content(encode_json($data));
+  $response = request($request);
+  is($response->code, $error_code, "error code is $error_code");
+  like ($response->content,
+    qr/Error saving outcome for 1:4 - Outcome description is missing/,
+    'outcome description for uqc should be present for 1:4');
+
+  $data->{'uqc'} = {'1:2' => {'uqc_outcome' => 'Accepted'}};
+  $request = _new_post_request();
+  $request->content(encode_json($data));
+  $response = request($request);
+  is($response->code, $error_code, "error code is $error_code for uqc");
+  like ($response->content, qr/Rationale required/,
+    'Rationale description should be present');
 };
 
 
