@@ -2,6 +2,7 @@ LIST OF CHANGES FOR NPG-QC PACKAGE
 
  - qc outcomes model: code generalisation to simplify addition of
    further qc types
+ - uqc outcomes - saving and updating enabled
  - switch to node 6.12.2 in travis
  - stop generating DBIx classes for unused tables
  - tiny tweaks to rna and verify bam id help links
